# microservices

./: README.md  build  clean_install.sh  pom.xml  restart-cluster  settings.xml
angular2-client/: .gitignore  Dockerfile  README.md  busybox.sha256  entrypoint  gulpfile.js  package.json  transpile.sh  tsconfig.json  tsd.json
angular2-client/app/: app.css  app.html  app.js  app.ts  config.js  config.js.map  config.ts  index.html  init.js  init.js.map  init.ts  login.html  login.js  login.ts  menu.html  menu.js  menu.ts  tasklist.html  tasklist.js  tasklist.ts
angular2-client/app/components/home/: home.html  home.ts
angular2-client/app/components/login/: login.html  login.ts
angular2-client/app/components/notifications/: notifications.html  notifications.js.map  (+1 more)
angular2-client/app/services/: AuthenticationService.ts  LoggingService.js  LoggingService.js.map  LoggingService.ts  NameList.ts  TaskService.ts  http.js  http.js.map  http.ts
angular2-client/app/typings/: tsd.d.ts
angular2-client/static-server/: static.cabal
angular2-client/static-server/src/: Main.hs
angular2-client/test/: happyflow.html  regressiontestsuite.html
angular2-client/typings/: tsd.d.ts
backend/: Dockerfile  pom.xml
data-initializer-service/: Dockerfile  pom.xml
debug-rest-service/: package.json  server.js
jdbc-auth-service/: Dockerfile  pom.xml
microservices-utils/: pom.xml
microservices-web/: pom.xml
mongodb-container/: Dockerfile
monitoring-service/: Dockerfile  pom.xml
monitoring-service-standalone-demo/: pom.xml
task-service/: Dockerfile  pom.xml
(+40 files in other folders)
